--- a/MicroServices/BonAppetit.RestaurantServices/Configurations/Configurations.csproj
+++ b/MicroServices/BonAppetit.RestaurantServices/Configurations/Configurations.csproj
@@ -7,6 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="BonneApetit.RestaurantServices\**" />
+    <EmbeddedResource Remove="BonneApetit.RestaurantServices\**" />
+    <None Remove="BonneApetit.RestaurantServices\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.0" />
@@ -16,10 +22,6 @@
     <ProjectReference Include="..\Data\Data.csproj" />
     <ProjectReference Include="..\Models\Models.csproj" />
     <ProjectReference Include="..\Services\Services.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="BonneApetit.RestaurantServices\" />
   </ItemGroup>
 
 </Project>
