--- a/MicroServices/BonAppetit.RestaurantServices/Configurations/Configurations.csproj
+++ b/MicroServices/BonAppetit.RestaurantServices/Configurations/Configurations.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.3" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.0" />
   </ItemGroup>
@@ -22,6 +23,11 @@
     <ProjectReference Include="..\Data\Data.csproj" />
     <ProjectReference Include="..\Models\Models.csproj" />
     <ProjectReference Include="..\Services\Services.csproj" />
+    <ProjectReference Include="..\StaticData\StaticData.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="AuthenticationConfigurations\" />
   </ItemGroup>
 
 </Project>
