--- a/MicroServices/BonAppetit.RestaurantServices/Services/Services.csproj
+++ b/MicroServices/BonAppetit.RestaurantServices/Services/Services.csproj
@@ -14,6 +14,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Data\Data.csproj" />
     <ProjectReference Include="..\Models\Models.csproj" />
+    <ProjectReference Include="..\StaticData\StaticData.csproj" />
   </ItemGroup>
 
   <ItemGroup>
