--- a/BonAppetitRestaurantManagerApp/ClientConfigurations/ClientConfigurations.csproj
+++ b/BonAppetitRestaurantManagerApp/ClientConfigurations/ClientConfigurations.csproj
@@ -8,10 +8,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Authentication" Version="6.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Http" Version="6.0.0" />
 	</ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="ClientAuthenticationConfigurations\" />
-  </ItemGroup>
 
 </Project>
