Email Sender skeleton

--- a/MicroServices/BonAppetit.EmailService/EmailService/EmailService.csproj
+++ b/MicroServices/BonAppetit.EmailService/EmailService/EmailService.csproj
@@ -4,14 +4,11 @@
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>debde984-b9af-4070-8ef1-945fa2f3ab0c</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
 	  <PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Controllers\" />
   </ItemGroup>
 
   <ItemGroup>
