--- a/MicroServices/BonAppetit.CouponServices/Configurations/Configurations.csproj
+++ b/MicroServices/BonAppetit.CouponServices/Configurations/Configurations.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
 		<TargetFramework>net6.0</TargetFramework>
@@ -16,6 +16,7 @@
 
 	<ItemGroup>
 		<ProjectReference Include="..\Data\Data.csproj" />
+		<ProjectReference Include="..\Services\Services.csproj" />
 		<ProjectReference Include="..\StaticData\StaticData.csproj" />
 	</ItemGroup>
 
