--- a/MicroServices/BonAppetit.CouponServices/Services/Services.csproj
+++ b/MicroServices/BonAppetit.CouponServices/Services/Services.csproj
@@ -6,4 +6,17 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="11.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Data\Data.csproj" />
+    <ProjectReference Include="..\Models\Models.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="CouponTypeService\" />
+  </ItemGroup>
+
 </Project>
