Rabbit Mq Begin

--- a/MicroServices/BonAppetit.PaymentService/RabbitMq/RabbitMq.csproj
+++ b/MicroServices/BonAppetit.PaymentService/RabbitMq/RabbitMq.csproj
@@ -7,8 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Options\" />
-    <Folder Include="PaymentMessageModels\" />
+    <PackageReference Include="RabbitMQ.Client" Version="6.2.4" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Configurations\Configurations.csproj" />
+    <ProjectReference Include="..\Models\Models.csproj" />
   </ItemGroup>
 
 </Project>
