--- a/MicroServices/BonAppetit.PaymentService/Services/Services.csproj
+++ b/MicroServices/BonAppetit.PaymentService/Services/Services.csproj
@@ -10,6 +10,7 @@
 		<PackageReference Include="AutoMapper" Version="11.0.1" />
 		<PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.4" />
 		<PackageReference Include="Stripe.net" Version="39.105.0" />
+		<PackageReference Include="RabbitMQ.Client" Version="6.2.4" />
 	</ItemGroup>
 
 	<ItemGroup>
