--- a/MicroServices/BonAppetit.ReservationService/Services/Services.csproj
+++ b/MicroServices/BonAppetit.ReservationService/Services/Services.csproj
@@ -7,12 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="RabbitMqService\" />
     <Folder Include="Repository\ReservationServices\" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="11.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="RabbitMQ.Client" Version="6.2.4" />
   </ItemGroup>
 
   <ItemGroup>
