--- a/MicroServices/BonAppetit.ReservationService/Models/Models.csproj
+++ b/MicroServices/BonAppetit.ReservationService/Models/Models.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="MessageQueueModels\ReservationSuccessModels\" />
+  </ItemGroup>
+
 </Project>
