--- a/MicroServices/BonAppetit.ReservationService/Services/Services.csproj
+++ b/MicroServices/BonAppetit.ReservationService/Services/Services.csproj
@@ -21,6 +21,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Data\Data.csproj" />
     <ProjectReference Include="..\Models\Models.csproj" />
+    <ProjectReference Include="..\StaticData\StaticData.csproj" />
   </ItemGroup>
 
 </Project>
